--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,6 +4,7 @@
         height:60px;
         width: 60px;
     }
+    img{max-width: 1000% !important;}
     .userIcon{
         margin-right: 10px;
     }
@@ -30,9 +31,13 @@
         display: inline-block;
         float: left;
         margin-right: 2%;
-        overflow: hidden;      
+        overflow: hidden;
+        position: relative;
+        height: 100px;
+        width:100px;     
     }
     .imglist img{
+        position: absolute;
         display: block;
         margin: 0 auto;
     }
@@ -43,14 +48,6 @@
     .slide-zoom{
         height: 100%;
     }
-    // .swiper-container-horizontal > .swiper-pagination-bullets{
-    //     top: 0px;       
-    // }
-    // .swiper-pagination-bullet{
-    //     width: 20%;
-    //     height: 30px;
-    //     border-radius: 3px;
-    // }
     .segment-md .segment-button.segment-activated{
         background-color: #488aff !important;
     }
@@ -78,6 +75,15 @@
     }
     .segment-md{
         background-color: #488aff;
+    }
+    [fix-top]{
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 100;
+    }
+    [margin-top]{
+        margin-top: 60px !important;
     }
 }
 ion-app.md [padding], ion-app.md [padding] .scroll-content{
